# esp32_hm3301

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
.github/workflows/: build.yml
main/: CMakeLists.txt  i2c_hm3301.c  idf_component.yml  main.c  uart_gps.c  uart_gps.h
main/connection/: conn_thread.c  wifi_conn.c
main/connection/mqtt/: conn_mqtt_client.h  mqtt_client.c
